# alpakka_qk

./: CMakeLists.txt  README.md  firmware.code-workspace  partitions.csv  sb.code-workspace  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  alpakka_qk.code-workspace  application.cc  application.h  idf_component.yml  main.cc
main/boards/: Haptic_Motor.h  axp2101.cc  axp2101.h  backlight.cc  backlight.h  board.cc  board.h  cpu.cc  cpu.h  i2c_device.cc  i2c_device.h  imu.cc  imu.h  joystick.cc  joystick.h  lcd_display.cc  lcd_display.h  matrix_keyboard.cc  matrix_keyboard.h  nvm.cc  nvm.h  touch.cc  touch.h
main/boards/hid/: BT.cc  ctrl.h  usb.cc  webusb.cc  webusb.h
main/bsp/: axp2101.cc  axp2101.h  axp2101reg.h  board.cc  config.h  imu.cc  imu.h  joystick.cc  nvm.cc  nvm.h  profile.cc  profile.h  rotary.cc  rotary.h  touch.cc  touch.h
main/bsp/hid/: tusb_config.h  webusb.cc  webusb.h
main/src/: button.cc  button.h  ctrl.cc  ctrl.h  gyro.cc  gyro.h  profile.cc  profile.h  rotary.cc  rotary.h  thumbstick.cc  thumbstick.h
main/src/bsp/: BT.cc  Haptic_Motor.cc  ICM42688.h  axp2101.cc  axp2101.h  backlight.cc  backlight.h  board.cc  board.h  board_config.h  common.cc  common.h  config.h  cpu.cc  cpu.h  i2c_device.cc  imu.cc  imu.h  joystick.cc  joystick.h  lcd_display.cc  lcd_display.h  logging.cc  logging.h  matrix_keyboard.cc  matrix_keyboard.h  nvm.cc  nvm.h  pcnt.cc  pcnt.h  rotary.cc  rotary.h  touch.cc  touch.h  ui_handle.cc  ui_handle.h  usb.cc  usb.h
main/src/hid/: BT.cc  BT.h  hid.cc  hid.h  report.cc  tusb_config.h  usb.h  webusb.cc  webusb.h  xinput.cc  xinput.h
main/src/profiles/: console.c  console.cc  console_legacy.c  console_legacy.cc  custom.c  custom.cc  desktop.c  desktop.cc  flight.c  flight.cc  fps_fusion.c  fps_fusion.cc  fps_wasd.c  fps_wasd.cc  home.c  home.cc  profiles_default.h  racing.c  racing.cc  rts.c  rts.cc
main/src/ui/: actions.cpp  actions.h  fonts.h  groups.c  images.c  screens.c  styles.c  ui.c  ui.h  ui_handle.cpp  ui_handle.h  vars.c  vars.cpp  vars.h
main/src/ui/eez/: alpakka.eez-project-ui-state
main/src/ui/fonts/: ui_font_ali.c
main/src/ui/images/: ui_image_gamepad.c  ui_image_set.c
main/ui/: actions.c  actions.h  eez-flow.h  fonts.h  groups.c  groups.h  images.c  images.h  screens.c  screens.h  styles.c  styles.h  ui.c  ui.h  vars.h
main/ui/eez/: alpakka.eez-project  alpakka.eez-project-ui-state
main/ui/fonts/: ui_font_fonts.c
main/ui/images/: ui_image_cs.c  ui_image_gamepad.c  ui_image_keymouse.c  ui_image_set.c  ui_image_standby.c
main/ui/images/素材/: ~$ DOCX 文档.docx
